# kitt4sme.flaw-sleuth

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  streamlit-app.py
.github/workflows/: release.yaml
data/: anomaly_detection.pkl  cls_new.joblib  data.npz  kalman_update.pf  kalman_update_old.pf  scaler_new.joblib  xgb_fine_tuned.pkl
flawsleuth/: ai.py  kalman.py  ngsy.py  runner.py  timeseries.py
flawsleuth/utils/: __init__.py
tests/sim/: docker-compose.yml  runner.py
tests/unit/: test_ai.py  test_version.py
tests/util/: Welding_data_new.csv  data_process.py  fiware.py
