[tool.poetry]
name = "flawsleuth"
version = "0.3.0"
description = "Leaves no stone unturned to find welding flaws!"
authors = ["souayb", "simhavas-uday", "c0c0n3"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fipy = {git = "https://github.com/c0c0n3/kitt4sme.fipy.git", tag = "0.2.1"}
pandas = "^1.4.1"
pydantic = "^1.9.0"
streamlit = "^1.8.1"
#numba = "0.55.1"
numpy = "^1.24.1"
pyod = "^0.9.8"
llvmlite = "^0.38.0"
# ^ NOTE pyod depends on llvmlite "^0.38.0" which requires python ">=3.8,<3.11".
# That's why we have that since e.g. w/ python = "^3.8", llvmlite won't install.
# But the funny thing is that if we don't specify the llvmlite dep explicitly,
# poetry install will still fail.
xgboost = "^1.6.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
plotly = "^5.12.0"
scikit-learn = "^1.2.0"
paho-mqtt = "^1.6.1"


[tool.poetry.dev-dependencies]
coverage = "^6.3"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"